FEAT: testing with different hyperparameters and specific image prediction testing added

--- a/Image Classification.ipynb
+++ b/Image Classification.ipynb
@@ -21,8 +21,8 @@
     "from tensorflow.keras import layers\n",
     "from tensorflow.keras.layers import Conv2D, Activation, Dropout, Dense, Flatten, MaxPooling2D, BatchNormalization\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.optimizers import RMSprop\n",
-    "from tensorflow.keras.callbacks import TensorBoard\n",
+    "from tensorflow.keras.optimizers import RMSprop, Adam\n",
+    "from tensorflow.keras.callbacks import TensorBoard, EarlyStopping, ModelCheckpoint\n",
     "import time"
    ]
   },
@@ -130,6 +130,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Testing different hyperparameters\n",
+    "dense_layers = [0,1]\n",
+    "layer_sizes = [16,32,64,128]\n",
+    "conv_layers = [1,2,3,4,5,6]\n",
+    "img_height = 256\n",
+    "img_width = 256\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=3, verbose=1)\n",
+    "for dense_layer in dense_layers:\n",
+    "    for layer_size in layer_sizes:\n",
+    "        for conv_layer in conv_layers:\n",
+    "            NAME = \"{}-conv-{}-nodes-{}-dense-{}\".format(conv_layer, layer_size, dense_layer, int(time.time()))\n",
+    "            print(NAME)\n",
+    "            tensorboard = TensorBoard(log_dir=\"logs/{}\".format(NAME))\n",
+    "\n",
+    "            model = Sequential()\n",
+    "            model.add(layers.Conv2D(layer_size, (3, 3), input_shape=(img_height, img_width, 3)))\n",
+    "            model.add(layers.Activation('relu'))\n",
+    "            model.add(layers.MaxPooling2D(pool_size=(2, 2)))\n",
+    "            model.add(layers.Dropout(0.2))\n",
+    "\n",
+    "            for l in range(conv_layer-1):\n",
+    "                model.add(layers.Conv2D(layer_size*2, (3, 3)))\n",
+    "                model.add(layers.Activation('relu'))\n",
+    "                model.add(layers.MaxPooling2D(pool_size=(2, 2)))\n",
+    "\n",
+    "            model.add(layers.Flatten())\n",
+    "            for _ in range(dense_layer):\n",
+    "                model.add(layers.Dense(layer_size))\n",
+    "                model.add(layers.Activation('relu'))\n",
+    "                model.add(layers.Dropout(0.4))\n",
+    "\n",
+    "            model.add(layers.Dense(1))\n",
+    "            model.add(layers.Activation('sigmoid'))\n",
+    "            \n",
+    "            model.compile(loss=\"binary_crossentropy\",\n",
+    "             optimizer=RMSprop(lr=0.001),\n",
+    "             metrics=['accuracy'])\n",
+    "            \n",
+    "            model.fit(X, y, batch_size=32, validation_split=0.2, epochs=20, callbacks=[tensorboard, early_stopping])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Name for tensorboard logs My CNN 80-83% valaccuracy\n",
     "NAME = \"Tags-notags-clothes-CNN-{}\".format(int(time.time()))\n",
     "tensorboard = TensorBoard(log_dir=\"logs/{}\".format(NAME))\n",
@@ -187,9 +234,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Training with 15 epochs and 20% validation split. Logs of loss and accuracy are sent to tensorboard\n",
-    "epochs = 12\n",
-    "model.fit(X, y, batch_size=32, validation_split=0.2, epochs=epochs,verbose=1, callbacks=[tensorboard])"
+    "#Training with 20 epochs and 20% validation split. Logs of loss and accuracy are sent to tensorboard\n",
+    "model_checkpoint = ModelCheckpoint(\"5conv-CNN-16nodes-1dense\", verbose=1, save_best_only=True)\n",
+    "epochs = 20\n",
+    "pat = 5 #this is the number of epochs with no improvement after which the training will stop\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=pat, verbose=1)\n",
+    "model.fit(X, y, batch_size=32, validation_split=0.2, epochs=epochs,verbose=1, callbacks=[tensorboard, early_stopping,model_checkpoint])"
    ]
   },
   {
@@ -205,10 +255,90 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Load Model\n",
     "model = tf.keras.models.load_model('5Conv-Tag-CNN.model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Load Best Model\n",
+    "model = tf.keras.models.load_model('5conv-CNN-16nodes-1dense')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def prepare_testimages(filepath):\n",
+    "    IMG_SIZE = 256\n",
+    "    img_array = cv2.imread(filepath)  # read in the image\n",
+    "    new_array = cv2.resize(img_array, (IMG_SIZE, IMG_SIZE))  # resize image to match model's expected sizing\n",
+    "    return new_array.reshape(-1, IMG_SIZE, IMG_SIZE, 3)  # return the image with shaping that TF wants.\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "CATEGORIES = [\"Notag\", \"Tag\"]  # will use this to convert prediction num to string value\n",
+    "notags_test_filepath = \"C:/Users/User/Desktop/ML/Clothes/Notags_test\"\n",
+    "tags_test_filepath = \"C:/Users/User/Desktop/ML/Clothes/Tags_test\"\n",
+    "\n",
+    "tag_count_right = 0        \n",
+    "tagcount = len(os.listdir(tags_test_filepath))\n",
+    "#Tags_test\n",
+    "for img in os.listdir(tags_test_filepath):\n",
+    "    prediction = model.predict([prepare_testimages(os.path.join(tags_test_filepath,img))])\n",
+    "    if int(prediction[0][0]) == 1:\n",
+    "        tag_count_right += 1\n",
+    "\n",
+    "notag_count_right = 0        \n",
+    "notagcount = len(os.listdir(notags_test_filepath))\n",
+    "\n",
+    "#Notags_test\n",
+    "for img in os.listdir(notags_test_filepath):\n",
+    "    prediction = model.predict([prepare_testimages(os.path.join(notags_test_filepath,img))])\n",
+    "    if int(prediction[0][0]) == 0:\n",
+    "        notag_count_right += 1\n",
+    "        \n",
+    "print(\"tag_accuracy:{0}, notag_accuracy:{1}\".format(tag_count_right/tagcount, notag_count_right/notagcount)) "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/scarf2.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/scarf3.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/shoes1.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/shoes2.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/purse1.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/purse2.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/scarf1.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/dress1.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/dress2.jpg\")]))\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -223,38 +353,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
-    "import tensorflow as tf\n",
-    "\n",
-    "CATEGORIES = [\"Notag\", \"Tag\"]  # will use this to convert prediction num to string value\n",
-    "\n",
-    "notags_test_filepath = \"C:/Users/User/Desktop/ML/Clothes/Notags_test\"\n",
-    "tags_test_filepath = \"C:/Users/User/Desktop/ML/Clothes/Tags_test\"\n",
-    "\n",
-    "def prepare_testimages(filepath):\n",
-    "    IMG_SIZE = 256\n",
-    "    img_array = cv2.imread(filepath)  # read in the image\n",
-    "    new_array = cv2.resize(img_array, (IMG_SIZE, IMG_SIZE))  # resize image to match model's expected sizing\n",
-    "    return new_array.reshape(-1, IMG_SIZE, IMG_SIZE, 3)  # return the image with shaping that TF wants.\n",
-    "\n",
-    "tag_count_right = 0        \n",
-    "tagcount = len(os.listdir(tags_test_filepath))\n",
-    "#Tags_test\n",
-    "for img in os.listdir(tags_test_filepath):\n",
-    "    prediction = model.predict([prepare_testimages(os.path.join(tags_test_filepath,img))])\n",
-    "    if int(prediction[0][0]) == 1:\n",
-    "        tag_count_right += 1\n",
-    "\n",
-    "notag_count_right = 0        \n",
-    "notagcount = len(os.listdir(notags_test_filepath))\n",
-    "\n",
-    "#Notags_test\n",
-    "for img in os.listdir(notags_test_filepath):\n",
-    "    prediction = model.predict([prepare_testimages(os.path.join(notags_test_filepath,img))])\n",
-    "    if int(prediction[0][0]) == 0:\n",
-    "        notag_count_right += 1\n",
-    "        \n",
-    "print(\"tag_accuracy:{0}, notag_accuracy:{1}\".format(tag_count_right/tagcount, notag_count_right/notagcount))        "
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/scarf2.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/scarf3.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/shoes1.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/shoes2.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/purse1.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/purse2.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/scarf1.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/dress1.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/dress2.jpg\")]))\n"
    ]
   },
   {
@@ -263,19 +370,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
-    "import tensorflow as tf\n",
-    "\n",
     "CATEGORIES = [\"Notag\", \"Tag\"]  # will use this to convert prediction num to string value\n",
-    "\n",
     "notags_test_filepath = \"C:/Users/User/Desktop/ML/Clothes/Notags_test\"\n",
     "tags_test_filepath = \"C:/Users/User/Desktop/ML/Clothes/Tags_test\"\n",
-    "\n",
-    "def prepare_testimages(filepath):\n",
-    "    IMG_SIZE = 256\n",
-    "    img_array = cv2.imread(filepath)  # read in the image\n",
-    "    new_array = cv2.resize(img_array, (IMG_SIZE, IMG_SIZE))  # resize image to match model's expected sizing\n",
-    "    return new_array.reshape(-1, IMG_SIZE, IMG_SIZE, 3)  # return the image with shaping that TF wants.\n",
     "\n",
     "tag_count_right = 0        \n",
     "tagcount = len(os.listdir(tags_test_filepath))\n",
@@ -294,7 +391,24 @@
     "    if int(prediction[0][0]) == 0:\n",
     "        notag_count_right += 1\n",
     "        \n",
-    "print(\"tag_accuracy:{0}, notag_accuracy:{1}\".format(tag_count_right/tagcount, notag_count_right/notagcount))        "
+    "print(\"tag_accuracy:{0}, notag_accuracy:{1}\".format(tag_count_right/tagcount, notag_count_right/notagcount)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/scarf2.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/scarf3.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/shoes1.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/shoes2.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/purse1.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/purse2.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/scarf1.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/dress1.jpg\")]))\n",
+    "print(model.predict([prepare_testimages(\"C:/Users/User/Desktop/ML/Clothes/Test/dress2.jpg\")]))\n"
    ]
   }
  ],
